<resources>
    <string name="app_name">AndriodStudyApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_start_another_activity_demo">StartActivityDemo</string>
    <string name="button_fragment_demo">FragmentDemo</string>
    <string name="button_savingdata_demo">SavingDataDemo</string>
    <string name="button_savingkeyvaluesets_demo">SavingKeyValueSetsDemo</string>
    <string name="edit_keyvaluesets">Input one value</string>
    <string name="button_display">Display</string>
    <string name="button_saving_on_file">SavingOnFie</string>
    <string name="button_saving_on_internal_storage">SavingOnInternalStorage</string>
    <string name="button_saving_on_internal_file">SaveOnInternalFile</string>
    <string name="button_Save_On_Cache_File">SaveOnCacheFile</string>
    <string name="button_saving_on_external_storage">SavingOnExternalStorage</string>
    <string name="button_saving_in_databases">SavingInDatabases</string>
    <string name="text_record_name">Record Name:</string>
    <string name="edit_input_name">Input Name</string>
    <string name="text_record_age">Record Age:</string>
    <string name="edit_input_age">Input Age</string>
    <string name="button_add_record">Add</string>
    <string name="button_update_record">Update</string>
    <string name="button_delete_record">Delete</string>
    <string name="button_interacting_with_other_apps">Interacting With Other Apps</string>
    <string name="button_sending_user_to_another_app">Sending User To Another App</string>
    <string name="button_dialing_phone">Dial Phone</string>
    <string name="button_view_a_map">View A Map</string>
    <string name="button_view_a_web">View A Web</string>
    <string name="button_send_an_email">Send An Email</string>
    <string name="button_create_a_calendar_event">Create Calendar Event</string>
    <string name="button_chooser_apps">Choose Apps</string>
    <string name="button_get_result_from_other_app">Getting Result From Other App</string>
    <string name="button_get_one_contact">Get One Contact</string>
    <string name="button_sharingsimpledata">Sharing Simple Data</string>
    <string name="button_sending_simple_data_to_other_apps">Sending Data To Other Apps</string>
    <string name="button_send_text_content">Send Text Content</string>
    <string name="button_send_binary_content">Send Binary Content</string>
    <string name="button_send_multiple_pieces_of_content">Send Multiple Content</string>
    <string name="text_receive_data">Please refer to Getting Result From Other App</string>
    <string name="button_receiving_simple_data_from_other_apps">Receive Data From Other Apps</string>
    <string name="button_adding_an_easy_share_action">Adding Share Action</string>
    <string name="button_content_sharing">Content Sharing</string>
    <string name="button_sharing_files">Sharing Files</string>
    <string name="button_sharing_a_file">Sharing A File</string>
    <string name="button_request_a_file">Request A File</string>
    <string name="text_file_description">File Description</string>
</resources>
