<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_saving_database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.jupiter.myfirstandriodapp.savingdata.savingdatabases.SavingDatabaseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_record_name"
        android:textAllCaps="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_input_name"
        android:id="@+id/edit_input_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/text_record_age"
        android:textAllCaps="false"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_input_age"
        android:id="@+id/edit_input_age"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_record"
        android:onClick="onAddInDatabase"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update_record"
        android:onClick="onUpdateInDatabase"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_record"
        android:onClick="onDeleteFromDatabase"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_display"
        android:onClick="onDisplay"/>

</LinearLayout>
