<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_saving_data_demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_savingkeyvaluesets_demo"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:onClick="onSavingKeyValueSets"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_saving_on_file"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:onClick="onSavingOnFile"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="@string/button_saving_in_databases"
        android:onClick="onSavingInDatabases"/>
</LinearLayout>
