<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_saving_on_internal_storage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.jupiter.myfirstandriodapp.savingdata.savingfiles.internalstorage.SavingOnInternalStorageActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_saving_on_internal_storage"
        android:hint="@string/edit_message"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="@string/button_saving_on_internal_file"
        android:onClick="onSavingOnInternalFileAndDisplay"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:text="@string/button_Save_On_Cache_File"
        android:onClick="onSavingOnCacheFileAndDispaly"/>

</LinearLayout>
